fix(theme-chalk): dark mode details (#7460)

--- a/packages/theme-chalk/src/dark/var.scss
+++ b/packages/theme-chalk/src/dark/var.scss
@@ -2,7 +2,7 @@
 @use 'sass:math';
 
 @use '../common/var.scss' as common;
-
+@use '../mixins/mixins.scss' as *;
 @use '../color/index.scss' as *;
 
 $colors: () !default;
@@ -139,12 +139,14 @@ $fill-color: map.merge(
 
 // mix to hex to avoid overlay issues
 @each $key, $val in $fill-color {
-  $fill-color: map.merge(
-    $fill-color,
-    (
-      $key: mix-overlay-color($val, map.get($bg-color, '')),
-    )
-  ) !global;
+  @if ($key != 'blank') {
+    $fill-color: map.merge(
+      $fill-color,
+      (
+        $key: mix-overlay-color($val, map.get($bg-color, '')),
+      )
+    ) !global;
+  }
 }
 
 // text
@@ -160,6 +162,15 @@ $text-color: map.merge(
   ),
   $text-color
 );
+// mix to hex to avoid overlay issues
+@each $key, $val in $text-color {
+  $text-color: map.merge(
+    $text-color,
+    (
+      $key: mix-overlay-color($val, map.get($bg-color, '')),
+    )
+  ) !global;
+}
 
 // mask
 $mask-color: () !default;
